--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,8 +15,8 @@
   <meta property="og:image" content="images/og-image.jpg" />
   <meta property="og:url" content="https://yourdomain.com/chamber/directory.html" />
 
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <header>
