--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,6 +46,6 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="js/directory.js"></script>
+  <script src="scripts/directory.js"></script>
 </body>
 </html>
