--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Chamber of Commerce Directory for Local Businesses" />
   <meta name="author" content="Yubrani Yaguaramay" />
