index commit fixed

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Chamber of Commerce Home Page" />
+  <meta name="description" content="Welcome to the Caxias do Sul Chamber of Commerce. Discover events, local businesses, and opportunities to grow our community together." />
   <meta name="author" content="Yubrani Yaguaramay" />
-  <title>Chamber Home</title>
-  <link rel="icon" href="images/chamberfavicom.png" />
+  
+  <title>Caxias do Sul Chamber of Commerce | Empowering Local Businesses</title>
+  
+  <link rel="icon" href="images/chamberfavicon.png" />
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Caxias do Sul Chamber of Commerce" />
+  <meta property="og:description" content="Connecting businesses and the community through events, support, and opportunities in Caxias do Sul." />
+  <meta property="og:image" content="images/hero.jpg" />
+  <meta property="og:url" content="https://yubrani.github.io/wdd231/index.html" />
+  <meta property="og:type" content="website" />
 </head>
+
 <body>
   <header>
   <nav>
