fix commit againx3

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,19 +8,19 @@
   
   <title>Caxias do Sul Chamber of Commerce | Empowering Local Businesses</title>
   
-  <link rel="icon" href="images/chamberfavicon.png" />
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="images/chamberfavicon.png">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Caxias do Sul Chamber of Commerce" />
-  <meta property="og:description" content="Connecting businesses and the community through events, support, and opportunities in Caxias do Sul." />
-  <meta property="og:image" content="images/hero.jpg" />
-  <meta property="og:url" content="https://yubrani.github.io/wdd231/index.html" />
-  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Caxias do Sul Chamber of Commerce">
+  <meta property="og:description" content="Connecting businesses and the community through events, support, and opportunities in Caxias do Sul.">
+  <meta property="og:image" content="images/hero.jpg">
+  <meta property="og:url" content="https://yubrani.github.io/wdd231/index.html">
+  <meta property="og:type" content="website">
   <meta property="og:image" content="https://yubrani.github.io/wdd231/chamber/images/hero.jpg">
-  <meta property="og:image:alt" content="Caxias do Sul Chamber of Commerce Hero Image" />
-  <meta property="og:site_name" content="Caxias do Sul Chamber of Commerce" />
+  <meta property="og:image:alt" content="Caxias do Sul Chamber of Commerce Hero Image">
+  <meta property="og:site_name" content="Caxias do Sul Chamber of Commerce">
   <meta property="og:url" content="https://yubrani.github.io/wdd231/chamber/index.html">
 
 </head>
@@ -39,8 +39,8 @@
   </header>
 
   <div class="banner">
-    <h1>Caxias do Sul Chamber of Commerce</h1>
-    <p>Empowering Local Businesses and Community</p>
+     <h1>Caxias do Sul Chamber of Commerce</h1>
+  
   <main>
       <!-- Hero section -->
        
