omg no that again x3

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,8 +40,8 @@
 
   <div class="banner">
      <h1>Caxias do Sul Chamber of Commerce</h1>
-  
-  <main>
+  </div>
+    <main>
       <!-- Hero section -->
        
       <section class="hero">
@@ -52,13 +52,13 @@
         </div>
       </section>
 
-      <!-- Current Events -->
-    <section class="events">
-      <h2>Upcoming Events</h2>
-      <ul id="events-list">
-        <!-- Aquí se insertan los eventos -->
-      </ul>
-    </section>
+        <!-- Current Events -->
+      <section class="events">
+        <h2>Upcoming Events</h2>
+        <ul id="events-list">
+          <!-- Aquí se insertan los eventos -->
+        </ul>
+      </section>
 
 
       <!-- Weather Section -->
@@ -74,7 +74,7 @@
         <h2>Business Spotlights</h2>
         <div id="spotlights" class="grid-view"></div>
       </section>
-  </main>
+   </main>
 
   <footer>
     <p>Contact us at info@yourchamber.com | +55 54 99999-0000</p>
