--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,6 +17,7 @@
   <title>Chamber Directory</title>
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
+  <script src="scripts/directory.js"></script>
 </head>
 <body>
   <header>
