--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,10 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Join the Chamber</title>
+  
+  <title>Join the Chamber of Commerce | Support Local Business</title>
+  
+  <meta name="description" content="Become a member of the Chamber of Commerce to access exclusive events, training, and networking opportunities for your business or organization." />
+  
+  <meta name="author" content="Yubrani Yaguaramay" />
+  
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Join the Chamber of Commerce | Support Local Business" />
+  <meta property="og:description" content="Join the Chamber to unlock benefits such as event access, advertising, and exclusive member discounts. Grow your business with us!" />
+  <meta property="og:image" content="images/og-image.jpg" />
+  <meta property="og:url" content="https://www.yourdomain.com/join.html" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Join the Chamber of Commerce | Support Local Business" />
+  <meta name="twitter:description" content="Join the Chamber to unlock benefits such as event access, advertising, and exclusive member discounts. Grow your business with us!" />
+  <meta name="twitter:image" content="images/og-image.jpg" />
+  
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/join.css" />
+  <script src="scripts/chamber.js"></script>
 </head>
+
 <body>
   <header>
     <!-- Common header -->
