fixed commit join

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Join the Chamber of Commerce | Support Local Business" />
   <meta property="og:description" content="Join the Chamber to unlock benefits such as event access, advertising, and exclusive member discounts. Grow your business with us!" />
   <meta property="og:image" content="images/og-image.jpg" />
-  <meta property="og:url" content="https://www.yourdomain.com/join.html" />
+  <meta property="og:url" content="https://yubranibyu.github.io/wdd231/chamber/" />
   <meta property="og:type" content="website" />
   
   <!-- Twitter Card -->
