--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,31 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Descubre Caxias do Sul</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="css/medium.css" />
+  <title>Discover Caxias do Sul</title>
+  <link rel="stylesheet" href="styles/stylesdiscover.css" />
 </head>
 <body>
   <header>
-    <!-- Contenido del encabezado -->
+    <h1>Descubre Caxias do Sul</h1>
   </header>
-  <nav>
-    <!-- Menú de navegación -->
-  </nav>
 
-  <main class="discover-grid">
-    <aside class="visitor-info">
-      <p id="visit-message"></p>
-    </aside>
-    
-    <section class="discover-gallery" id="discover-gallery">
-      <!-- Las tarjetas se insertarán dinámicamente aquí -->
+  <main>
+    <section class="cards-container" id="cards-container">
+      <!-- Las tarjetas se insertarán aquí -->
     </section>
   </main>
 
   <footer>
-    <!-- Contenido del pie de página -->
+    <p>&copy; 2025 Caxias do Sul Chamber</p>
   </footer>
-  <script src="js/discover.js"></script>
+
+  <script src="scripts/discover.js"></script>
 </body>
 </html>
