fixed again meta

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Discover Caxias do Sul</title>
-  <link rel="stylesheet" href="styles/stylesdiscover.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Discover Caxias do Sul - Chamber of Commerce</title>
+
+  <!-- Meta description for SEO -->
+  <meta name="description" content="Explore the main tourist and cultural attractions of Caxias do Sul with the Chamber of Commerce. Discover parks, museums, wineries, and more." />
+
+  <!-- Meta author -->
+  <meta name="author" content="Yubrani Yaguaramay">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!-- Open Graph meta tags for social media -->
+  <meta property="og:title" content="Discover Caxias do Sul - Chamber of Commerce">
+  <meta property="og:description" content="Explore the main tourist and cultural attractions of Caxias do Sul with the Chamber of Commerce.">
+  <meta property="og:image" content="images/og-image.webp">
+  <meta property="og:url" content="https://yourwebsite.com/discover.html">
+  <meta property="og:type" content="website">
+
+  <link rel="stylesheet" href="styles/discover.css">
 </head>
+
 <body>
   <header>
-    <h1>Descubre Caxias do Sul</h1>
+    <h1>Discover Caxias do Sul</h1>
   </header>
 
   <main>
     <section class="cards-container" id="cards-container">
-      <!-- Las tarjetas se insertarán aquí -->
+      
     </section>
   </main>
 
