--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,8 +19,10 @@
   <meta property="og:title" content="Discover Caxias do Sul - Chamber of Commerce">
   <meta property="og:description" content="Explore the main tourist and cultural attractions of Caxias do Sul with the Chamber of Commerce.">
   <meta property="og:image" content="images/og-image.webp">
-  <meta property="og:url" content="https://yourwebsite.com/discover.html">
+  <meta property="og:url" content="https://yubranibyu.github.io/wdd231/chamber/discover.html">
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Caxias do Sul Chamber of Commerce">
+  <meta property="og:locale" content="es_ES">
 
   <link rel="stylesheet" href="styles/discover.css">
 </head>
