last fix chamber discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -18,13 +18,15 @@
   <!-- Open Graph meta tags for social media -->
   <meta property="og:title" content="Discover Caxias do Sul - Chamber of Commerce">
   <meta property="og:description" content="Explore the main tourist and cultural attractions of Caxias do Sul with the Chamber of Commerce.">
-  <meta property="og:image" content="images/og-image.webp">
+  <meta property="og:image" content="images/hero.jpg">
+  <meta property="og:image:alt" content="A scenic view of Caxias do Sul">
   <meta property="og:url" content="https://yubranibyu.github.io/wdd231/chamber/discover.html">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Caxias do Sul Chamber of Commerce">
   <meta property="og:locale" content="es_ES">
 
   <link rel="stylesheet" href="styles/discover.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
