discover final fix

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -25,16 +25,34 @@
   <meta property="og:site_name" content="Caxias do Sul Chamber of Commerce">
   <meta property="og:locale" content="es_ES">
 
-  <link rel="stylesheet" href="styles/discover.css">
+  
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
   <header>
-    <h1>Discover Caxias do Sul</h1>
-  </header>
+  <div class="header-container">
+    <img src="images/chamberfavicom.png" alt="Chamber Logo" class="logo" />
+    <h1>Caxias Chamber</h1>
+
+    <button id="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
+      ☰
+    </button>
+
+    <nav id="navbar">
+      <ul id="nav-menu" class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="discover.html">Discover</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="join.html">Join</a></li>
+      </ul>
+    </nav>
+  </div>
+  
+</header>
 
   <main>
+    <h1>Discover Caxias do Sul</h1>
     <section class="cards-container" id="cards-container">
       
     </section>
