final again fix

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
   <header>
   <div class="header-container">
     <img src="images/chamberfavicom.png" alt="Chamber Logo" class="logo" />
-    <h1>Caxias Chamber</h1>
+    <h1 class="header-title">Caxias Chamber</h1>
 
     <button id="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
       ☰
