--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
   <meta property="og:locale" content="es_ES">
 
   
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
