head fix first commit

--- a/final/index.html
+++ b/final/index.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Interactive Game Catalog</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Welcome to my interactive game catalog in this catalog you can find a variety of games to explore." />
+  <meta name="author" content="Yubrani Yaguaramay" />
+  
+  <!-- Favicon -->
+  
+  <link rel="icon" href="images/gamefavicom.png" />
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Interactive game catalog" />
+  <meta property="og:description" content="Explore a variety of games in this interactive catalog." />
+  <meta property="og:image" content="https://yubranibyu.github.io/wdd231/final/images/hero.jpg" />
+  <meta property="og:url" content="https://yubranibyu.github.io/wdd231/final/index.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:alt" content="Interactive game catalog Hero Image" />
+  <meta property="og:site_name" content="Interactive game catalog" />
+
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
